--- a/style.css
+++ b/style.css
@@ -3,36 +3,80 @@ body{
     padding: 0;
 }
 
-.body{
+header {
     display: flex;
     flex-direction: column;
-    margin: 0;
-}
-
-.header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 50px;
-    margin: 0;
     background-color: #1f2937;
+    padding:  0 0 50px 0;
 }
 
-.headerlinks{
-    list-style: none;
-    display: flex;
-    gap: 20px;
+.logo{
+    color: #f9faf8;
+    font-size: 24px;
 }
 
-a{
+.heromain{
+    font-size: 48px;
+    color: #f9faf8;
+    font-weight: bolder;
+}
+
+.herosecond , a{
+    font-size: 18px;
+    color: #e5e7eb;
     text-decoration: none;
-    color: grey;
 }
 
-.topcontainer{
+ul{
     display: flex;
-    justify-content: center;
+    list-style: none;
+    gap: 2em;
+    margin: 0;
+    padding: 0;
+}
+
+.topheader{
+    display: flex;
     align-items: center;
-    gap: 50px;
-    background-color: #1f2937;
+    justify-content: space-between;
+    padding: 1em 10em;
+}
+
+.bottomheader{
+    display: flex;    
+    justify-content: space-between;
+    padding: 1em 10em;
+}
+
+.bottomleftheader{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: flex-start;
+}
+
+.signup{
+    background-color: #3882f6;
+    border: 0;
+    border-radius:5px;
+    padding: 5px 20px;
+    color: #e5e7eb;
+    font-weight: bold;
+
+}
+
+.mainimg{
+    width: 500px;
+    height: 200px;
+}
+
+
+.cardscontainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.cards{
+    display: flex;
 }
