--- a/style.css
+++ b/style.css
@@ -1,6 +1,15 @@
 body{
+    display: flex;
+    flex-direction: column;
     margin: 0;
     padding: 0;
+    min-height: 100vh;
+}
+
+.body{
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
 }
 
 header {
@@ -8,6 +17,7 @@ header {
     flex-direction: column;
     background-color: #1f2937;
     padding:  0 0 50px 0;
+    justify-self: flex-start;
 }
 
 .logo{
@@ -57,7 +67,8 @@ ul{
 
 .signup{
     background-color: #3882f6;
-    border: 0;
+    border: 1;
+    border-color: #3882f6;
     border-radius:5px;
     padding: 5px 20px;
     color: #e5e7eb;
@@ -79,4 +90,62 @@ ul{
 
 .cards{
     display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    padding: 50px;
+    text-align: center;
+}
+
+.quote{
+    display: flex;
+    justify-content: center;
+    background-color: #e5e7eb;
+    font-size: 36px;
+    font-weight:lighter;
+    font-style: italic;
+    color: #1f2937;
+    padding: 50px;
+}
+
+.bottomcontainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    gap: 50px;
+    background-color: #3882f6;
+    width: 500px;
+    height: 100px;
+    border-radius: 10px;
+    flex-grow: 1;
+    color: white;
+    font-weight: bold;
+}
+
+
+
+footer{
+    display: flex;
+    text-align: center;
+    background-color: #1f2937;
+    color: white;
+    justify-content: center;
+    margin-top: auto;
+}
+
+img{
+    width: 250px;
+    height: 250px;
+}
+
+.signup2{
+    background-color: #3882f6;
+    border: 2;
+    border-radius:5px;
+    padding: 5px 20px;
+    color: #e5e7eb;
+    font-weight: bold;
+    outline: aqua;
 }
